[package]
name = "btc-black-hole-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"
eframe = { version = "0.29.1", features = ["wgpu"] }
num_cpus = "1.13"
bitcoin = "0.30.1"
base58 = "0.2.0"
sha2 = { version = "0.10", features = ["asm"] }
copypasta = "0.10.1"
core_affinity = "0.8.1"

[lib]
name = "btc_black_hole_rust"
path = "src/lib.rs"

[[bin]]
name = "btc-black-hole-rust"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
